syntax = "proto3";

package new_stories;

service NewStories {
  rpc GetNewStories (NewStoriesRequest) returns (NewStoriesReply);
}

message NewStoriesRequest {
  string data_source = 1;
  uint32 limit = 2;
}

message NewStoriesReply {
  string message = 1;
}